@@ -104,13 +104,6 @@ module Gem::InstallUpdateOptions
                 "dependencies") do |value, options|
       options[:development] = true
     end
-
-    add_option(:"Install/Update", "--prerelease",
-               "Install prerelease versions of a gem if",
-               "available. Defaults to skipping",
-               "prereleases.") do |value, options|
-      options[:prerelease] = true
-    end
   end
 
   ##
